--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "projen",
+  "name": "@bn-digital/projen",
+  "description": "Set of tools for building projects in bndigital",
   "repository": {
     "type": "git",
-    "url": "https://github.com/vlad.volkov/projen.git"
+    "url": "https://github.com/bndigital/projen.git"
   },
   "scripts": {
     "build": "npx projen build",
@@ -13,7 +14,6 @@
     "default": "npx projen default",
     "docgen": "npx projen docgen",
     "eject": "npx projen eject",
-    "eslint": "npx projen eslint",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
     "package:js": "npx projen package:js",
@@ -22,82 +22,40 @@
     "pre-compile": "npx projen pre-compile",
     "release": "npx projen release",
     "test": "npx projen test",
-    "test:watch": "npx projen test:watch",
     "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
     "watch": "npx projen watch",
     "projen": "npx projen"
   },
   "author": {
-    "name": "Vlad Volkov",
-    "email": "vlad.volkov@bndigital.co",
-    "organization": false
+    "name": "bndigital",
+    "email": "dev@bndigital.co",
+    "organization": true
   },
   "devDependencies": {
-    "@types/jest": "^27",
     "@types/node": "^14",
-    "@typescript-eslint/eslint-plugin": "^5",
-    "@typescript-eslint/parser": "^5",
-    "eslint": "^8",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import": "^2.26.0",
-    "jest": "^27",
-    "jest-junit": "^13",
     "jsii": "^1.72.0",
     "jsii-diff": "^1.72.0",
     "jsii-docgen": "^7.0.168",
     "jsii-pacmak": "^1.72.0",
-    "json-schema": "^0.4.0",
     "npm-check-updates": "^16",
     "projen": "^0.65.50",
     "standard-version": "^9",
-    "ts-jest": "^27",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "peerDependencies": {
+    "projen": "^0.65.50"
+  },
+  "dependencies": {
+    "projen": "^0.65.50"
   },
   "main": "lib/index.js",
   "license": "Apache-2.0",
-  "version": "0.0.0",
-  "jest": {
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
-    ],
-    "clearMocks": true,
-    "collectCoverage": true,
-    "coverageReporters": [
-      "json",
-      "lcov",
-      "clover",
-      "cobertura",
-      "text"
-    ],
-    "coverageDirectory": "coverage",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "watchPathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "reporters": [
-      "default",
-      [
-        "jest-junit",
-        {
-          "outputDirectory": "test-reports"
-        }
-      ]
-    ],
-    "preset": "ts-jest",
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "tsconfig.dev.json"
-      }
-    }
+  "publishConfig": {
+    "access": "public"
   },
+  "version": "0.0.0",
   "types": "lib/index.d.ts",
   "stability": "stable",
   "jsii": {
