--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -165,9 +165,9 @@
       "name": "pre-compile",
       "description": "Prepare the project for compilation"
     },
-    "release": {
-      "name": "release",
-      "description": "Prepare a release from \"main\" branch",
+    "release:latest": {
+      "name": "release:latest",
+      "description": "Prepare a release from \"latest\" branch",
       "env": {
         "RELEASE": "true"
       },
