--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   },
   "scripts": {
     "build": "npx projen build",
-    "clobber": "npx projen clobber",
+    "bump": "npx projen bump",
     "compat": "npx projen compat",
     "compile": "npx projen compile",
     "default": "npx projen default",
-    "docgen": "npx projen docgen",
     "eject": "npx projen eject",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
@@ -19,7 +18,9 @@
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
+    "release:latest": "npx projen release:latest",
     "test": "npx projen test",
+    "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
     "watch": "npx projen watch",
     "projen": "npx projen"
@@ -34,10 +35,10 @@
     "@types/node": "^14",
     "jsii": "^1.72.0",
     "jsii-diff": "^1.72.0",
-    "jsii-docgen": "^7.0.182",
     "jsii-pacmak": "^1.72.0",
     "npm-check-updates": "^16",
     "projen": "0.65.72",
+    "standard-version": "^9",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
