--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch: {}
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       contents: write
     outputs:
@@ -54,7 +54,7 @@ jobs:
           path: dist
   self-mutation:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       contents: write
     if: always() && needs.build.outputs.self_mutation_happened && !(github.event.pull_request.head.repo.full_name != github.repository)
@@ -83,7 +83,7 @@ jobs:
             git push origin HEAD:${{ github.event.pull_request.head.ref }}
   package-js:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions: {}
     if: "! needs.build.outputs.self_mutation_happened"
     steps:
