--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 !/.projen/tasks.json
 !/.projen/deps.json
 !/.projen/files.json
-!/.github/workflows/pull-request-lint.yml
 !/package.json
 !/LICENSE
 !/.npmignore
@@ -32,9 +31,11 @@ jspm_packages/
 .cache
 !/.projenrc.js
 !/.github/workflows/build.yml
+/dist/changelog.md
+/dist/version.txt
+!/.github/workflows/release.yml
 !/.mergify.yml
-!/.github/workflows/upgrade.yml
-!/.github/pull_request_template.md
+!/.github/workflows/upgrade-latest.yml
 !/test/
 !/tsconfig.dev.json
 !/src/
@@ -42,4 +43,3 @@ jspm_packages/
 /dist/
 .jsii
 tsconfig.json
-!/API.md
