--- a/package.json
+++ b/package.json
@@ -31,21 +31,18 @@
   "devDependencies": {
     "@bn-digital/eslint-config": "^2.0.24",
     "@bn-digital/prettier-config": "^2.1.9",
-    "@types/lodash": "^4.14.191",
     "@types/node": "^18",
     "jsii": "^1.73.0",
     "jsii-diff": "^1.73.0",
     "jsii-pacmak": "^1.73.0",
     "lint-staged": "^13.1.0",
-    "lodash": "^4.17.21",
-    "projen": "0.66.10",
+    "projen": "0.66.11",
     "standard-version": "^9",
     "ts-node": "^10.9.1",
-    "typescript": "4.9.4",
-    "vite": "^4.0.4"
+    "typescript": "4.9.4"
   },
   "peerDependencies": {
-    "projen": "0.66.10"
+    "projen": "0.66.11"
   },
   "engines": {
     "node": ">= 18.0.0"
@@ -55,7 +52,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "0.0.0",
+  "version": "0.4.6",
   "types": "lib/index.d.ts",
   "stability": "stable",
   "jsii": {
