--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -64,7 +64,13 @@
       "description": "Synthesize project files",
       "steps": [
         {
+          "exec": "yarn set version berry"
+        },
+        {
           "exec": "ts-node --project tsconfig.dev.json .projenrc.ts"
+        },
+        {
+          "exec": "yarn"
         }
       ]
     },
@@ -111,15 +117,19 @@
       "name": "post-compile",
       "description": "Runs after successful compilation"
     },
+    "post-upgrade": {
+      "name": "post-upgrade",
+      "description": "Runs after upgrading dependencies"
+    },
     "pre-compile": {
       "name": "pre-compile",
       "description": "Prepare the project for compilation",
       "steps": [
         {
-          "exec": "prettier --write src"
+          "exec": "npx prettier --write src/**/*.{js,jsx,ts,tsx,json,md,less,graphql}"
         },
         {
-          "exec": "eslint --fix src"
+          "exec": "npx eslint --fix src/**/*.{js,jsx,ts,tsx}"
         }
       ]
     },
@@ -164,6 +174,45 @@
       "steps": [
         {
           "builtin": "release/reset-version"
+        }
+      ]
+    },
+    "upgrade": {
+      "name": "upgrade",
+      "description": "upgrade dependencies",
+      "env": {
+        "CI": "0"
+      },
+      "steps": [
+        {
+          "exec": "yarn upgrade npm-check-updates"
+        },
+        {
+          "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='typescript'"
+        },
+        {
+          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='typescript'"
+        },
+        {
+          "exec": "npm-check-updates --dep peer --upgrade --target=minor --reject='typescript'"
+        },
+        {
+          "exec": "npm-check-updates --dep prod --upgrade --target=minor --reject='typescript'"
+        },
+        {
+          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='typescript'"
+        },
+        {
+          "exec": "yarn install --check-files"
+        },
+        {
+          "exec": "yarn upgrade"
+        },
+        {
+          "exec": "npx projen"
+        },
+        {
+          "spawn": "post-upgrade"
         }
       ]
     },
