--- a/.npmignore
+++ b/.npmignore
@@ -17,7 +17,15 @@ dist
 /.projenrc.js
 tsconfig.tsbuildinfo
 !.jsii
-!/resources/
+!/assets/
+
+
+# Exclude jsii outdir
+dist
+
+# Include .jsii and .jsii.gz
+!.jsii
+!.jsii.gz
 
 
 # Exclude jsii outdir
