--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -10,6 +10,10 @@ yarnPath: .yarn/releases/yarn-3.5.0.cjs
 logFilters:
   - code: YN0002
     level: discard
+  - code: YN0032
+    level: discard
+  - code: YN0060
+    level: discard
   - code: YN0061
     level: discard
   - code: YN0062
