--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@bn-digital/eslint-config": "^2.1.18",
-    "@bn-digital/prettier-config": "^2.3.7",
+    "@bn-digital/prettier-config": "2.3.7",
     "@bn-digital/typescript-config": "^1.3.1",
     "@types/jest": "^29.5.0",
     "@types/node": "^16",
@@ -47,14 +47,14 @@
     "jsii-pacmak": "^1.80.0",
     "lint-staged": "^13.2.1",
     "npm-check-updates": "^16",
-    "projen": "0.71.5",
+    "projen": "0.71.6",
     "standard-version": "^9",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "5.x"
   },
   "peerDependencies": {
-    "projen": "0.71.5"
+    "projen": "0.71.6"
   },
   "dependencies": {
     "comment-json": "^4.2.3"
@@ -154,7 +154,7 @@
       }
     ]
   },
-  "prettier": "@bn-digital/prettier-config@*",
+  "prettier": "@bn-digital/prettier-config",
   "packageManager": "yarn@3.5.0",
   "workspaces": [
     "packages/*"
