--- a/package.json
+++ b/package.json
@@ -33,50 +33,46 @@
     "organization": true
   },
   "devDependencies": {
-    "@bn-digital/eslint-config": "^2.1.18",
+    "@bn-digital/eslint-config": "^2.1.19",
     "@bn-digital/prettier-config": "2.3.7",
     "@bn-digital/typescript-config": "^1.3.1",
     "@types/jest": "^29.5.0",
-    "@types/node": "^16",
+    "@types/lodash.template": "^4.5.1",
+    "@types/node": "^18",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
-    "jest-unit": "^0.0.2",
+    "jest-snapshot": "^29.5.0",
     "jsii": "5.x",
     "jsii-diff": "^1.80.0",
     "jsii-docgen": "^7.1.46",
     "jsii-pacmak": "^1.80.0",
     "lint-staged": "^13.2.1",
+    "lodash.template": "^4.5.0",
     "npm-check-updates": "^16",
-    "projen": "0.71.6",
+    "projen": "0.71.7",
     "standard-version": "^9",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "5.x"
+    "typescript": "^5.0.4"
   },
   "peerDependencies": {
-    "projen": "0.71.6"
+    "projen": "^0.71.7"
   },
   "dependencies": {
-    "comment-json": "^4.2.3"
+    "comment-json": "^4.2.3",
+    "lodash.template": "^4.5.0"
   },
   "bundledDependencies": [
-    "comment-json"
+    "comment-json",
+    "lodash.template"
   ],
   "engines": {
-    "node": ">= 16.0.0"
+    "node": ">= 18.0.0"
   },
   "main": "lib/index.js",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
-  },
-  "typesVersions": {
-    "<=3.9": {
-      "lib/*": [
-        "lib/.types-compat/ts3.9/*",
-        "lib/.types-compat/ts3.9/*/index.d.ts"
-      ]
-    }
   },
   "version": "0.0.0",
   "types": "lib/index.d.ts",
