Fixed package task
Signed-off-by: Vlad Volkov <vlad.volkov@bndigital.co>

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -94,7 +94,7 @@
       "description": "Creates the distribution package",
       "steps": [
         {
-          "exec": "npx projen package-all"
+          "exec": "npx projen package:js"
         }
       ]
     },
