--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,8 @@
 
 name: build
 on:
-  pull_request: {}
-  workflow_dispatch: {}
+  pull_request: { }
+  workflow_dispatch: { }
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -55,7 +55,7 @@ jobs:
   package-js:
     needs: build
     runs-on: ubuntu-latest
-    permissions: {}
+    permissions: { }
     if: "! needs.build.outputs.self_mutation_happened"
     steps:
       - uses: actions/setup-node@v3
@@ -72,8 +72,8 @@ jobs:
       - name: Prepare Repository
         run: mv dist .repo
       - name: Install Dependencies
-        run: cd .repo && yarn install --immutable
+        run: cd .repo && yarn install
       - name: Create js artifact
-        run: cd .repo && npx projen package:js
+        run: cd .repo && npx projen package
       - name: Collect js Artifact
         run: mv .repo/dist dist
