--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           node-version: 18.0.0
       - name: Install dependencies
-        run: yarn install --immutable
+        run: yarn
       - name: build
         run: npx projen build
       - name: Find mutations
@@ -46,47 +46,17 @@ jobs:
           git add .
           git diff --staged --patch --exit-code > .repo.patch || echo "self_mutation_happened=true" >> $GITHUB_OUTPUT
       - name: Upload patch
-        if: steps.self_mutation.outputs.self_mutation_happened
+        if: 'steps.self_mutation.outputs.self_mutation_happened'
         uses: actions/upload-artifact@v3
         with:
           name: .repo.patch
           path: .repo.patch
       - name: Fail build on mutation
-        if: steps.self_mutation.outputs.self_mutation_happened
+        if: 'steps.self_mutation.outputs.self_mutation_happened'
         run: |-
           echo "::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch."
           cat .repo.patch
           exit 1
-      - name: Backup artifact permissions
-        run: cd dist && getfacl -R . > permissions-backup.acl
-        continue-on-error: true
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-artifact
-          path: dist
-  package-js:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions: { }
-    if: "! needs.build.outputs.self_mutation_happened"
-    steps:
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18.0.0
-      - name: Download build artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build-artifact
-          path: dist
-      - name: Restore build artifact permissions
-        run: cd dist && setfacl --restore=permissions-backup.acl
-        continue-on-error: true
-      - name: Prepare Repository
-        run: mv dist .repo
-      - name: Install Dependencies
-        run: cd .repo && yarn install
       - name: Create js artifact
-        run: cd .repo && npx projen package
-      - name: Collect js Artifact
-        run: mv .repo/dist dist
+        if: '! steps.self_mutation.outputs.self_mutation_happened'
+        run: npx projen package
