--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,20 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - uses: sonarsource/sonarqube-scan-action@master
+        with:
+          args: |
+            -Dsonar.projectName=${{ github.event.repository.name }}
+            -Dsonar.projectKey=${{ github.event.repository.name }}
+            -Dsonar.links.scm=https://github.com/${{ github.repository }}
+            -Dsonar.links.ci=https://github.com/${{ github.repository }}/actions
       - uses: sonarsource/sonarqube-quality-gate-action@master
         timeout-minutes: 5
+        with:
+          args: |
+            -Dsonar.projectName=${{ github.event.repository.name }}
+            -Dsonar.projectKey=${{ github.event.repository.name }}
+            -Dsonar.links.scm=https://github.com/${{ github.repository }}
+            -Dsonar.links.ci=https://github.com/${{ github.repository }}/actions
 
   build:
     runs-on: ubuntu-latest
