--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 
 /.gitattributes linguist-generated
 /.gitignore linguist-generated
+/.mergify.yml linguist-generated
 /.projen/** linguist-generated
 /.projen/deps.json linguist-generated
 /.projen/files.json linguist-generated
