--- a/.npmignore
+++ b/.npmignore
@@ -3,7 +3,6 @@
 permissions-backup.acl
 /dist/changelog.md
 /dist/version.txt
-/.mergify.yml
 /test/
 /tsconfig.dev.json
 /src/
@@ -20,6 +19,7 @@ tsconfig.tsbuildinfo
 !.jsii
 *cache
 .env*
+.mergify.yml
 /build
 /test-reports
 /test
