--- a/.mergify.yml
+++ b/.mergify.yml
@@ -4,14 +4,13 @@ queue_rules:
   - name: default
     update_method: merge
     conditions:
-      - "#approved-reviews-by>=1"
       - -label~=(do-not-merge)
       - status-success=build
-      - status-success=package-js
+      - status-success=analyze
 pull_request_rules:
   - name: Automatic merge on approval and successful build
     actions:
-      delete_head_branch: {}
+      delete_head_branch: { }
       queue:
         method: squash
         name: default
@@ -20,7 +19,6 @@ pull_request_rules:
 
           {{ body }}
     conditions:
-      - "#approved-reviews-by>=1"
       - -label~=(do-not-merge)
       - status-success=build
-      - status-success=package-js
+      - status-success=analyze
